Correct hero overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,13 +160,15 @@ input.btn-book-call-secondary:hover {
 
 #hero {
     width: 100%;
-    height: 50vh;
+    height: auto;
+    min-height: 50vh;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     animation: clip-hero-anim 1.25s cubic-bezier(0.29, 0.8, 0.8, 0.98);
     will-change: clip-path;
+    overflow: hidden;
 }
 
 .hero-container {
